--- a/P008189.opf/meta.yml
+++ b/P008189.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P008189
+id: P008189
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1AC434
   title: 'སོ་ནམ་པ། '
-  volume: ''
   author: ''
+  volumes: {}
