--- a/P008189.opf/layers/v001/Pagination.yml
+++ b/P008189.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 013d920b971b4368bb4cea4fe30d2c4a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   20e24b5e0e504a98b6be850f7d0109a0:
