--- a/P008189.opf/meta.yml
+++ b/P008189.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P008189
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 13:06:56.565561
 source_metadata:
   id: bdr:W1AC434
   title: 'སོ་ནམ་པ། '
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 190
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: true
